--- a/order-service/src/main/resources/bootstrap.properties
+++ b/order-service/src/main/resources/bootstrap.properties
@@ -1,4 +1,4 @@
-spring.application.name=product-service
+spring.application.name=order-service
 
 server.port=0
 eureka.instance.instance-id=${spring.application.name}:${random.uuid}
